[project]
name = "task-orch"
version = "0.1.0"
description = "Distributed Task Orchestration in a Scraping System"
authors = [
    {name = "Fayaz Yusuf Khan",email = "fayaz.yusuf.khan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
addopts = [
    "--cov", "task_orch", "--cov-report=term-missing", "--cov-report=xml",
]
